--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TransCrate International Logistics WarHouse solutions</title>
+    <title></title>
     <tagname>Content goes here...</tagname>
 </head>
 <body>
